--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 	"dependencies": {
 		"@blockshake/defly-connect": "^1.2.1",
 		"@perawallet/connect": "^1.4.2",
+		"@supabase/ssr": "^0.7.0",
+		"@supabase/supabase-js": "^2.75.1",
 		"@txnlab/use-wallet-svelte": "^4.3.1",
 		"algosdk": "^3.5.2",
 		"openai": "^6.5.0"
