--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@tailwindcss/vite": "^4.1.13",
 		"@tanstack/table-core": "^8.21.3",
 		"@types/node": "^22",
+		"@types/qrcode": "^1.5.5",
 		"ai": "^5.0.76",
 		"bits-ui": "^2.11.8",
 		"clsx": "^2.1.1",
@@ -61,6 +62,7 @@
 		"algosdk": "^3.5.2",
 		"buffer": "^6.0.3",
 		"lucide-svelte": "^0.546.0",
-		"openai": "^6.5.0"
+		"openai": "^6.5.0",
+		"qrcode": "^1.5.4"
 	}
 }
